[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "disclib"
version = "0.0.1"
authors = [
  { name="Universidad de Los Andes", email="isis1225@uniandes.edu.co" },
]
description = "DISCLib es una librería Python no orientada a objetos para enseñar los conceptos de estructuras de datos y algoritmos en la Universidad de los Andes, desarrollada por los profesores y personal de la Facultad de Ingeniería, Departamento de Sistemas e Ingeniería Informática #DISC."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ISIS1225DEVS/ISIS1225-Lib"
"Bug Tracker" = "https://github.com/ISIS1225DEVS/ISIS1225-Lib/issues"